Use reflection to workaround Java 9 private API changes in DirectBuffer class. Move disposeMappedBuffer logic from GcHelper to TombFileAccessor.